--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+*.rpm
 /dfhack-0.44.05-r1.tar.gz
 /dfhack-clsocket-0f0ad78.tar.gz
 /dfhack-df-structures-40da723.tar.gz
 /dfhack-isoworld-3ff3f05.tar.gz
 /dfhack-scripts-8d079a5.tar.gz
 /dfhack-stonesense-455b51a.tar.gz
+/dfhack-0.44.05-r2.tar.gz
+/dfhack-df-structures-2794f8a.tar.gz
+/dfhack-scripts-9d8f209.tar.gz
+/dfhack-stonesense-031bf4c.tar.gz
