Update to latest upstream release of dfhack for 0.44.09.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@
 /dfhack-df-structures-2794f8a.tar.gz
 /dfhack-scripts-9d8f209.tar.gz
 /dfhack-stonesense-031bf4c.tar.gz
+/dfhack-0.44.09-r1.tar.gz
+/dfhack-df-structures-3c0bf63.tar.gz
+/dfhack-isoworld-fbbf9e4.tar.gz
+/dfhack-scripts-7d7dd8a.tar.gz
+/dfhack-stonesense-0430344.tar.gz
