Update to latest upstream release.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 /dfhack-isoworld-fbbf9e4.tar.gz
 /dfhack-scripts-7d7dd8a.tar.gz
 /dfhack-stonesense-0430344.tar.gz
+/dfhack-0.44.10-r1.tar.gz
+/dfhack-clsocket-6a9153d.tar.gz
+/dfhack-df-structures-c3025fe.tar.gz
+/dfhack-scripts-0b6e4a5.tar.gz
+/dfhack-stonesense-164d2cd.tar.gz
