Update to 0.44.12-r1, add new jsoncpp submodule.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@
 /dfhack-df-structures-c3025fe.tar.gz
 /dfhack-scripts-0b6e4a5.tar.gz
 /dfhack-stonesense-164d2cd.tar.gz
+/dfhack-0.44.12-r1.tar.gz
+/dfhack-df-structures-23500e4.tar.gz
+/dfhack-jsoncpp-ddabf50.tar.gz
+/dfhack-scripts-4a1953f.tar.gz
+/dfhack-stonesense-4a1953f.tar.gz
