Update dfhack to release r2 for 0.44.12.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@
 /dfhack-jsoncpp-ddabf50.tar.gz
 /dfhack-scripts-4a1953f.tar.gz
 /dfhack-stonesense-4a1953f.tar.gz
+/dfhack-0.44.12-r2.tar.gz
+/dfhack-df-structures-4421583.tar.gz
+/dfhack-scripts-4a0f63e.tar.gz
+/dfhack-stonesense-4a0f63e.tar.gz
