Update to 0.47.03-alpha0, fix FTBFS with gcc10.

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@
 /dfhack-df-structures-4421583.tar.gz
 /dfhack-scripts-4a0f63e.tar.gz
 /dfhack-stonesense-4a0f63e.tar.gz
+/dfhack-0.47.03-alpha0.tar.gz
+/dfhack-df-structures-018558e.tar.gz
+/dfhack-scripts-4fdb2be.tar.gz
+/dfhack-stonesense-4fdb2be.tar.gz
