Update sources file.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@
 /dfhack-df-structures-018558e.tar.gz
 /dfhack-scripts-4fdb2be.tar.gz
 /dfhack-stonesense-4fdb2be.tar.gz
+/dfhack-0.47.04-beta1.tar.gz
+/dfhack-clsocket-8340c07.tar.gz
+/dfhack-df-structures-d51a1c4.tar.gz
+/dfhack-isoworld-e3c49ab.tar.gz
+/dfhack-scripts-b9fc288.tar.gz
+/dfhack-stonesense-b9fc288.tar.gz
