--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /dfhack-isoworld-e3c49ab.tar.gz
 /dfhack-scripts-b9fc288.tar.gz
 /dfhack-stonesense-b9fc288.tar.gz
+/dfhack-0.47.04-r1.tar.gz
+/dfhack-df-structures-0792fc0.tar.gz
